--- a/index.html
+++ b/index.html
@@ -244,7 +244,8 @@
       // Hero Component
       const Hero = () => {
         return (
-          <section className="relative h-screen min-h-[600px] flex items-center overflow-hidden">
+          // FIX: Changed h-screen to min-h-screen and added vertical padding (py-32) to ensure content is never clipped
+          <section className="relative min-h-screen flex items-center pt-32 pb-20 md:pt-40 md:pb-24 overflow-hidden">
             {/* Background Image with Overlay */}
             <div className="absolute inset-0 z-0">
               <motion.div 
@@ -263,8 +264,8 @@
               <div className="absolute inset-0 bg-black/20"></div>
             </div>
 
-            {/* Adjusted padding-top (pt-32 md:pt-40) to prevent Header from overlapping content */}
-            <div className="container mx-auto px-4 md:px-6 relative z-10 text-white pt-32 md:pt-40">
+            {/* Content Container - removed fixed pt values to rely on flex centering and section padding */}
+            <div className="container mx-auto px-4 md:px-6 relative z-10 text-white">
               <motion.div 
                 initial={{ opacity: 0, x: -30 }}
                 animate={{ opacity: 1, x: 0 }}
@@ -281,7 +282,6 @@
                   <span className="font-semibold text-sm md:text-base tracking-wide">Đồng hành pháp lý cùng bạn</span>
                 </motion.div>
                 
-                {/* Adjusted leading (line-height) and tracking (letter-spacing) for better desktop display */}
                 <h1 className="text-5xl md:text-7xl font-bold font-serif leading-tight md:leading-tight mb-8 drop-shadow-lg tracking-tight">
                   Dịch Vụ Luật Sư <br/>
                   <span className="text-transparent bg-clip-text bg-gradient-to-r from-yellow-200 via-yellow-400 to-yellow-500 filter drop-shadow-none">
@@ -301,7 +301,6 @@
                     Tư Vấn Ngay 
                     <ArrowRight size={20} className="group-hover:translate-x-1 transition-transform" />
                   </a>
-                  {/* Changed background to dark semi-transparent for better visibility */}
                   <a 
                     href="#dich-vu"
                     className="bg-slate-900/40 hover:bg-slate-900/60 backdrop-blur-md border border-white/30 text-white px-8 py-4 rounded-xl font-bold text-lg flex items-center justify-center transition-all hover:border-white/50"
